CAT-621 risk profiler makes unnecessary decision tree polls (#79)